--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -5,14 +5,50 @@
     <title>Lesson 1</title>
   </head>
   <body>
-    <ul>
+    <table width="100%" border="1" cellpadding="10" cellspacing="0">
+      <tr align="center">
+        <td colspan="4">
+          <h1>Some title</h1>
+        </td>
+      </tr>
+      <tr align="center">
+        <td>
+          <a href="page2.html">Home</a>
+        </td>
+        <td>
+          <a href="#">Some link</a>
+        </td>
+        <td>
+          <a href="#">Some link</a>
+        </td>
+        <td>
+          <a href="#">Some link</a>
+        </td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <td width="10%"></td>
+        <td width="80%">
+          <h2>Some title</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea iure
+            quam accusamus quis numquam possimus nam delectus, ipsa quasi
+            maiores tenetur exercitationem accusantium commodi impedit inventore
+            hic provident dolorum. Vitae!
+          </p>
+        </td>
+        <td width="10%"></td>
+      </tr>
+    </table>
+    <!-- <ul>
       <li>Fork - <a href="https://git-fork.com/">https://git-fork.com/</a></li>
       <li>
         Github Desktop -
         <a href="https://desktop.github.com/">https://desktop.github.com/</a>
       </li>
       <li>GIT - <a href="https://git-scm.com/">https://git-scm.com/</a></li>
-    </ul>
+    </ul> -->
 
     <!-- <section>
       <div>
