--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -61,10 +61,10 @@
     </div>
     <div class="box4"></div> -->
     <!-- ДЗ -->
-    <!-- <div class="img-block">
+    <div class="img-block">
       <div class="inner-box"></div>
       <div class="overlay"></div>
-    </div> -->
+    </div>
     <!-- !!!!!! -->
   </body>
 </html>
