--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Lesson 10</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <h1>Last lesson !</h1>
   <h2>GIT</h2>
   <ul>
     <li>
@@ -21,7 +23,7 @@
       Scout - <a href="https://scout-app.io/">https://scout-app.io/</a>
     </li>
   </ul>
-  <h2>Extra...</h2>
+  <h2>Дополнительная информация</h2>
   <ul>
     <li>
       Бесплатные макеты PSD - <a href="https://symu.co/">https://symu.co/</a>
