--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>FINAL LESSON</title>
 </head>
 <body>
-  <h2>GIT</h2>
-  <ul>
-    <li>
-      GIT Flow - <a href="https://www.atlassian.com/ru/git/tutorials/comparing-workflows/gitflow-workflow">Ссылка</a>
-    </li>
-  </ul>
-  <h2>SASS</h2>
+  <h2>LESS</h2>
   <ul>
     <li>
       Koala - <a href="http://koala-app.com/">http://koala-app.com/</a>
@@ -24,10 +18,10 @@
   <h2>Extra...</h2>
   <ul>
     <li>
-      Бесплатные макеты PSD - <a href="https://symu.co/">https://symu.co/</a>
+      PSD - <a href="https://symu.co/">https://symu.co/</a>
     </li>
     <li>
-      Olios - <a href="https://symu.co/freebies/templates-4/olios-psd-template/">Link</a>
+      Olios - <a href="u.co/freebies/templates-4/olios-psd-template/">Link</a>
     </li>
     <li>
       Activebox PSD - <a href="https://freebiesbug.com/code-stuff/activebox-free-html-template/">Link</a>
